Revision history for PDF::SVG

0.00

	- Add single-style outline for simple <text>.
	- Add circle.
	- Add polyline.
	- Add image (inline, base64).
	- (CSS) Handle outline shorthand.
	- (CSS) Fix priorities.
	- Elegantly skip unimplemented arcs.
	- Fix rectangle bug.
	- Fix fontsize bug in makefont.

0.02	2023-07-07

	- Moved repo to Github.
	- Added subroutine signatures.
	- Almost everything is working again.
	- (CSS) Handle selector el.class.
	- Fixed css mixups and whitespace elements.

0.01    2022-04-03

	- First version, released on an unsuspecting world.
